Revision history for XML::Grammar::ProductsSyndication

        - Adapted the Build.PL to properly install files in case we
        don't install under /usr . We are currently using the
        install_destination("lib") to determine a suitable place.
            - To do: extract that logic into a separate class.

0.03    Tue Jun 17 11:32:22 IDT 2008
        - Added the "disable" attribute to the "isbn" tag, and added
        support for it everywhere.
        - Converted from Moose to Class::Accessor, because Moose does not
        install cleanly on cygwin and is an overkill for our needs.
        - Added support for the <rellink /> tag that creates a relevant
        link (such as wikipedia page, IMDB link, etc.)
        - Added the support for the "appendtoc" tag to append a
        table-of-contents.

0.02    Sat Sep  9 17:19:01 IDT 2006
        - Added the ability to download Amazon.com images.
        
0.01    Fri Sep  8 22:02:16 IDT 2006
        - Created the skeleton of the module using module-starter. 
        - Implemented the basic XSLT + DTD functionality.