@@ -4,32 +4,7 @@ use warnings;
 use File::Spec;
 use lib File::Spec->catdir(File::Spec->curdir(), "inc");
 
-use Test::Run::Builder;
-
-use File::Find;
-
-my @extradata_files;
-
-my @module_ns = (qw(XML Grammar ProductsSyndication));
-my $module_name = join("-", @module_ns);
-
-sub filter_files
-{
-    my $filename = $File::Find::name;
-    if ((-f $filename) && ($filename =~ /\.(?:mod|xslt|dtd|ent|cat|jpg|xcf\.bz2)$/))
-    {
-        push @extradata_files, $filename;
-    }
-}
-
-find({ wanted => \&filter_files, no_chdir => 1}, "extradata");
-
-sub get_dest_extradata_file
-{
-    my $fn = shift;
-    $fn =~ s{^extradata}{data};
-    return "lib/$module_name/$fn";
-}
+use XML::Grammar::Builder;
 
 my $builder = Test::Run::Builder->new(
     module_name         => 'XML::Grammar::ProductsSyndication',
@@ -48,25 +23,7 @@ my $builder = Test::Run::Builder->new(
     },
     add_to_cleanup      => [ 'XML::Grammar::ProductsSyndication-*' ],
     create_makefile_pl => 'passthrough',
-    extradata_files => 
-    {
-        (map { $_ => get_dest_extradata_file($_) } @extradata_files)
-    },
-);
-
-$builder->add_build_element('extradata');
-
-$builder->install_path()->{'extradata'} = 
-        File::Spec->catdir(
-                $builder->install_destination("lib"),
-                qw(data modules),
-                $module_name,
-                qw(data)
-        );
-
-$builder->config_data(
-    'extradata_install_path' =>
-    [$builder->install_path()->{'extradata'}]
 );
 
 $builder->create_build_script();
+
