@@ -48,6 +48,7 @@ extradata/xhtml-symbol.ent
 extradata/xhtml-table-1.mod
 extradata/xhtml-text-1.mod
 inc/Test/Run/Builder.pm
+inc/XML/Grammar/Builder.pm
 lib/XML/Grammar/ProductsSyndication.pm
 Makefile.PL
 MANIFEST
